# struct_deser

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
struct_deser-derive/: Cargo.toml  README.md
struct_deser-derive/src/: lib.rs
tests/: test_byte_order.rs  test_struct.rs  test_tuple_struct.rs
